Fix vertical alignment on enroll secret copy and view icons. Add min height to left side navigation. Tweak styles on 500 page.

--- a/frontend/layouts/CoreLayout/_styles.scss
+++ b/frontend/layouts/CoreLayout/_styles.scss
@@ -32,6 +32,7 @@
   left: 0;
   z-index: 100;
   max-height: 100vh;
+  min-height: 600px;
 
   &--small {
     padding-left: 0;
