--- a/frontend/pages/Fleet500/_styles.scss
+++ b/frontend/pages/Fleet500/_styles.scss
@@ -6,6 +6,8 @@
   a {
     color: $core-blue;
     text-decoration: none;
+    display: block;
+    margin-top: 16px;
 
     &:hover {
       text-decoration: underline;
